--- a/server/assets/css/gamejam.css
+++ b/server/assets/css/gamejam.css
@@ -1,20 +1,7 @@
-
-#map {
-    height: 100%;
-	width: 100%;
-	min-height: 1000px;
-	}
-	
-div.twoup.left {
-    float: left;
-	clear: left;
+div.noun {
+    position: absolute;
 }
 
-div.twoup.right {
-    float: right;
-	clear: right;
-}
-
-div.twoup.container {
-      width: 400px;
+div.noun img {
+    position: absolute;
 }
